# LetItOut

./: .gitmodules  CMakeLists.txt  Makefile  README.md  customtitlebar.cpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  style.qss
.github/workflows/: cmake.yml  main.yml
installer/: installer.nsi
installer/config/: config.xml
resources/: resources.qrc  style.qss
src/: customtitlebar.cpp  customtitlebar.h  main.cpp  mainwindow.cpp  mainwindow.h
